--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,61 @@
+*{
+    box-sizing: border-box;
+}
 body {
-  background: aliceBlue;
+  background: linear-gradient(to right, #1BBCB1, #37B9E9);
+  font-family: 'Quicksand', sans-serif;
+}
+
+header h1 {
+  font-family: 'Quicksand', sans-serif;
+  text-align: center;
+  font-size: 72px;
+  background: -webkit-linear-gradient(black, grey);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+main {
+  margin: 0 auto;
+  width: 650px;
+}
+
+footer {
+  font-family: 'Quicksand', sans-serif;
+  text-align: center;
+  font-size: 32px;
+}
+
+.gameBoard {
+  background-color: grey;
+  width: 650px;
+  height: 250px;
+  margin-top: 10px;
+}
+
+.difficulty {
+  background-color: yellow;
+  width: 650px;
+  height: 50px;
+  margin-top: 10px;
+}
+
+.inplay {
+  background-color: red;
+  width: 650px;
+  height: 50px;
+  margin-top: 10px;
+}
+
+.scoreSound {
+  background-color: green;
+  width: 650px;
+  height: 80px;
+  margin-top: 10px;
+}
+
+button {
+  border-radius: 5px;
+  height: 30px;
+  width: 120px;
 }
