--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -45,11 +45,12 @@ footer {
   width: 50px;
   height: 35px;
   float: left;
+  display: inline-block;
 }
 .difficulty {
   background-color: yellow;
   width: 650px;
-  height: 50px;
+  height: 40px;
   margin-top: 10px;
   text-align: center;
 }
@@ -57,7 +58,7 @@ footer {
 .inplay {
   background-color: red;
   width: 650px;
-  height: 50px;
+  height: 40px;
   margin-top: 10px;
 }
 
@@ -69,9 +70,17 @@ footer {
 }
 
 button {
-  border-radius: 5px;
-  height: 30px;
-  width: 120px;
+  background: linear-gradient(45deg, rgba(255,184,115,0.65) 0%,rgba(255,124,189,0.65) 50%,rgba(108,0,153,0.65) 100%);
+	border-radius: 5px;
+	box-shadow: 0px 2px 4px rgba(34,62,66,.25);
+  color: #fff;
+  font-size: 15px;
+  letter-spacing: 0.5px;
+  // padding: 16px 32px;
+  text-decoration: none;
+  text-transform: uppercase;
+  -webkit-transition: box-shadow 1s ease;
+	transition: box-shadow 1s ease;
 }
 
 // .easyButton .hardButton {
