--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -26,7 +26,7 @@ footer {
   text-align: center;
   background: linear-gradient(to left, #169c93, #1590bc);
   border-radius: 10px;
-  border: 1px solid white;
+  border: 1px solid dodgerBlue;
   font-size: 18px;
   margin: 30px auto;
   width: 650px;
@@ -65,7 +65,7 @@ footer {
 
 }
 .difficulty {
-  background-color: yellow;
+  // background-color: yellow;
   width: 650px;
   height: 60px;
   margin-top: 20px;
@@ -73,14 +73,14 @@ footer {
 }
 
 .inplay {
-  background-color: red;
+  // background-color: red;
   width: 650px;
   height: 60px;
   margin-top: 10px;
 }
 
 .scoreSound {
-  background-color: green;
+  // background-color: green;
   width: 650px;
   height: 100px;
   margin-top: 50px;
@@ -103,7 +103,7 @@ button {
 
 .easyButton, .hardButton {
   background: linear-gradient(45deg, #216deb 0%, #875891 50%, #ec4437 100%);
-  color: white;
+  color: black;
 }
 
 .resetButton {
