--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -68,7 +68,7 @@ main {
 
   .inplay {
     width: 100%;
-    height: 60px;
+    // height: 60px;
     margin-top: 20px;
     text-align: center;
 
@@ -82,8 +82,9 @@ main {
 
   .scoreSound {
     width: 100%;
-    height: 100px;
+    // height: 100px;
     margin-top: 30px;
+    margin-bottom: 15px;
     text-align: center;
 
     .soundOnOff {
@@ -200,11 +201,18 @@ button {
     max-width: 100%;
     height: auto;
     margin: 0 auto;
+
+    .leftfoot, .rightfoot {
+      float:none;
+      display: block;
+      text-align: center;
+      height: 25px;
+    }
   }
-  .leftfoot, .rightfoot {
-    display: block;
-    float: none;
-    height: 25px;
-    margin: 0 auto;
+  .inplay {
+    height: auto;
+  }
+  .scoreSound {
+    height: auto;
   }
 }
