--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -202,12 +202,14 @@ button {
     height: auto;
     margin: 0 auto;
 
-    .leftfoot, .rightfoot {
-      float:none;
-      display: block;
-      text-align: center;
-      height: 25px;
-    }
+
+
+  }
+  footer  footer .rightfoot {
+    float:none;
+    display: block;
+    text-align: center;
+    height: 25px;
   }
   .inplay {
     height: auto;
